# nanachan

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .ignore  AGENTS.md  Dockerfile  LICENSE  README.md  mcpserver.py  nanapi-codegen.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.forgejo/workflows/: ci.yaml  deploy_env.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
hooks/: pre-commit
nanachan/: __main__.py  changelog.py  example.local_settings.py  settings.py
nanachan/discord/: application_commands.py  bot.py  cog.py  help.py  helpers.py  reactions.py  views.py
nanachan/extensions/: __init__.py  ai.py  amq.py  anilist.py  audio.py  basic_commands.py  calendar.py  changelog.py  easter_eggs.py  embeds.py  events.py  export.py  histoire.py  images.py  karaoke.py  mod.py  pot.py  presence.py  profiles.py  profiling.py  projection.py  quizz.py  roles.py  tsundere.py  waicolle.py  word_analysis.py  wrapped.py
nanachan/nanapi/: _client.py  client.py  model.py
nanachan/redis/: base.py  waifu.py  wasabi.py
nanachan/rpg_model/: HeroClass.py  Inventory.py  Player.py  character.py  currencies.py  equipment.py  expedition.py  expedition_collection.py  exploration_kart.py  rpg_waicolle_utils.py
nanachan/utils/: ai.py  anilist.py  calendar.py  conditions.py  github.py  mime.py  misc.py  ollama.py  projection.py  quizz.py  reddit.py  settings.py  toolz.py  twitch.py  waicolle.py
test/: saucenao.py  test_conditions.py
tools/: churros_get_token.py  register_bot.py
