[project]
name = "nanachan"
version = "0.1.0"
description = "Japan7 Discord bot"
readme = "README.md"
license = "MIT"
authors = [
    { name = "mistiru", email = "dev@mistiru.me" },
    { name = "Pierre Jeanjean", email = "rhiobet@gmail.com" },
    { name = "odrling", email = "florianbadie@odrling.xyz" },
    { name = "NextFire", email = "git@yuru.moe" },
]
requires-python = ">=3.13"
dependencies = [
    "discord-py[voice]",
    "discord-ext-voice-recv==0.5.2a179",
    "matplotlib==3.10.6",
    "python-socketio[asyncio_client]==5.14.0",
    "aiohttp[speedups]==3.12.15",
    "aiofiles==24.1.0",
    "Pillow==11.3.0",
    "html2text==2025.4.15",
    # https://github.com/PyYoshi/cChardet/issues/81
    "faust-cchardet==2.1.19",
    "yarl==1.20.1",
    "rich==14.1.0",
    "pydantic==2.11.9",
    "numpy==2.3.3",
    "tldr==3.4.3",
    "watchfiles==1.1.0",
    "backoff==2.2.1",
    "yappi",
    "redis[hiredis]==6.4.0",
    "parsedatetime==2.6",
    "yt-dlp[default]==2025.9.26",
    "aiojobs==1.4.0",
    "tzdata==2025.2",
    "python-dateutil==2.9.0.post0",
    "pydantic-ai-slim[openai,mistral,mcp,duckduckgo,tavily]==1.0.12",
    "openai==2.0.1",
    "google-genai==1.40.0",
]

[dependency-groups]
dev = [
    "pyright==1.1.406",
    "ruff==0.13.2",
    "mahou-py",
    "requests==2.32.5",
    # FIXME: https://pypi.org/project/types-redis/#description
    # Note: Redis-py 5.0.0 added a py.typed file, but the inline annotations are incomplete.
    # Continuing to use types-redis for the time being may lead to superior results.
    "types-redis==4.6.0.20241004",
    "fawltydeps>=0.19.0",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/Japan7/discord.py.git", rev = "27cc8196e457d009238876219168b223f700968c" }
mahou-py = { git = "https://github.com/Japan7/mahou.py.git", rev = "97386841249dfc90349401a24c11c8b17231ca81" }
yappi = { git = "https://github.com/odrling/yappi.git", rev = "c1ea539c831ad0c46f7b0b463025688d7db05c14" }

[project.urls]
homepage = "https://github.com/Japan7/nanachan"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
ignore = [
    # lambda expressions
    "E731",
    # ambiguous variable name
    "E741",
    # Do not perform function calls in argument defaults
    "B008",
    # Within an except clause, raise exceptions with `raise ... from err` or `raise ... from None`
    "B904",
    # `zip()` without an explicit `strict=` parameter
    "B905",
    # Use `contextlib.suppress(asyncio.CancelledError)` instead of try-except-pass
    "SIM105",
    # Use ternary operator `{contents}` instead of if-else-block
    "SIM108",
    # `itertools.batched()` without an explicit `strict` parameter
    "B911",
]

[tool.ruff.lint.per-file-ignores]
"nanachan/changelog.py" = ["E501"]
"nanachan/*local_settings.py" = ["E501"]
"nanachan/nanapi/_*.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.fawltydeps]
ignore_unused = [
    # cchardet is used by aiohttp
    "faust-cchardet",
    # tzdata provides timezones when the OS/distribution doesn’t
    "tzdata",
    # dev tools
    "fawltydeps",
    "ruff",
    "pyright",
    # we have 1st party utils modules with the same name
    # https://github.com/tweag/FawltyDeps/issues/419
    "discord-py",
    "discord-ext-voice-recv",
    "redis",
    "types-redis",
]
output_format = "human_detailed"
