[project]
name = "nanachan"
version = "0.1.0"
description = "Japan7 Discord bot"
readme = "README.md"
license = "MIT"
authors = [
    { name = "mistiru", email = "dev@mistiru.me" },
    { name = "Pierre Jeanjean", email = "rhiobet@gmail.com" },
    { name = "odrling", email = "florianbadie@odrling.xyz" },
    { name = "NextFire", email = "git@yuru.moe" },
]
requires-python = ">=3.13"
dependencies = [
    "discord-py[voice]",
    "discord-ext-voice-recv==0.5.2a179",
    "matplotlib==3.10.8",
    "python-socketio[asyncio_client]==5.16.0",
    "aiohttp[speedups]==3.13.3",
    "aiofiles==25.1.0",
    "Pillow==12.1.0",
    "html2text==2025.4.15",
    # https://github.com/PyYoshi/cChardet/issues/81
    "faust-cchardet==2.1.19",
    "yarl==1.22.0",
    "rich==14.3.2",
    "pydantic==2.12.5",
    "numpy==2.4.2",
    "tldr==3.4.3",
    "watchfiles==1.1.1",
    "backoff==2.2.1",
    "yappi==1.7.3",
    "valkey[libvalkey]==6.1.1",
    "parsedatetime==2.6",
    "yt-dlp[default]==2026.1.31",
    "aiojobs==1.4.0",
    "tzdata==2025.3",
    "python-dateutil==2.9.0.post0",
    "pydantic-ai-slim[openrouter,mcp,duckduckgo,tavily]==1.51.0",
]

[dependency-groups]
dev = [
    "pyright==1.1.408",
    "ruff==0.14.14",
    "mahou-py",
    "requests==2.32.5",
    "fawltydeps>=0.19.0",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/Japan7/discord.py.git", rev = "27cc8196e457d009238876219168b223f700968c" }
mahou-py = { git = "https://github.com/Japan7/mahou.py.git", rev = "4f45d342708c9f51174cc3ab57040a8d5d427827" }

[project.urls]
homepage = "https://github.com/Japan7/nanachan"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
ignore = [
    # lambda expressions
    "E731",
    # ambiguous variable name
    "E741",
    # Do not perform function calls in argument defaults
    "B008",
    # Within an except clause, raise exceptions with `raise ... from err` or `raise ... from None`
    "B904",
    # `zip()` without an explicit `strict=` parameter
    "B905",
    # Use `contextlib.suppress(asyncio.CancelledError)` instead of try-except-pass
    "SIM105",
    # Use ternary operator `{contents}` instead of if-else-block
    "SIM108",
    # `itertools.batched()` without an explicit `strict` parameter
    "B911",
]

[tool.ruff.lint.per-file-ignores]
"nanachan/changelog.py" = ["E501"]
"nanachan/*local_settings.py" = ["E501"]
"nanachan/nanapi/_*.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.fawltydeps]
ignore_unused = [
    # cchardet is used by aiohttp
    "faust-cchardet",
    # tzdata provides timezones when the OS/distribution doesn’t
    "tzdata",
    # dev tools
    "fawltydeps",
    "ruff",
    "pyright",
    # we have 1st party utils modules with the same name
    # https://github.com/tweag/FawltyDeps/issues/419
    "discord-py",
    "discord-ext-voice-recv",
]
output_format = "human_detailed"
